Fixed post table body truncation with app scss class

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,3 +5,7 @@
         max-width: 100%;
     }
 }
+
+.container {
+    height: 400px;
+}
